--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask==1.1.2
 requests==2.25.1
 cachecontrol==0.12.6
 dataclasses==0.6
-firebase_admin==5.0.0
+#firebase_admin==5.0.0
 flask_cors==3.0.10
 flask_dance==5.0.0
 flask_jwt==0.3.2
