added appspec in artifact

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -37,6 +37,7 @@ phases:
     #- printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
 artifacts:
   files:
+    - appspec.yml
     - docker_build/tasker.tar.gz  
   discard-paths : yes     
   # base-directory : docker_build
