--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,14 @@ os: linux
 #    destination: /tmp
 hooks:
   ApplicationStop:
-    - location: scripts/kill_container.sh
-      timeout: 1
+    - location: kill_container.sh
+      timeout: 2
       runas: ec2-user
   AfterInstall:
-    - location: scripts/load_image.sh
-      timeout: 1.5
+    - location: load_image.sh
+      timeout: 2.5
       runas: ec2-user
   ApplicationStart:
-    - location: scripts/start_container.sh
-      timeout: 1
+    - location: start_container.sh
+      timeout: 2
       runas: ec2-user
