--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,10 @@ files:
   - source: ./
     destination: /tmp/code-deploy_tasker
 hooks:
+  BeforeInstall:
+    - location: delete_previous_version.sh
+      timeout: 10
+      runas: root
   ApplicationStop:
     - location: kill_container.sh
       timeout: 10
