--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,6 +41,7 @@ artifacts:
     - scripts/kill_container.sh
     - scripts/load_image.sh
     - scripts/start_container.sh
+    - scripts/delete_previous_version.sh
     - docker_build/tasker.tar.gz  
   discard-paths : yes     
   # base-directory : docker_build
